[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/parallax/clouds.png" type="Texture" id=1]
[ext_resource path="res://assets/art/parallax/sky.png" type="Texture" id=2]
[ext_resource path="res://assets/art/parallax/clouds2.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/characters/dummyHamster.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/scenes/UI/Menu.gd" type="Script" id=5]
[ext_resource path="res://assets/fonts/doppio-one.regular.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=2]
size = 58
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 6 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Sky" type="Sprite" parent="."]
position = Vector2( 239.75, 359 )
scale = Vector2( 14.9844, 22.5 )
texture = ExtResource( 2 )

[node name="Clouds7" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 110, 109 )
scale = Vector2( 6.875, 6.875 )
texture = ExtResource( 3 )

[node name="Clouds8" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 370, 110 )
scale = Vector2( 6.875, 6.875 )
texture = ExtResource( 3 )

[node name="Clouds9" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 110, 347 )
scale = Vector2( 6.875, 6.875 )
texture = ExtResource( 3 )

[node name="Clouds10" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 370, 348 )
scale = Vector2( 6.875, 6.875 )
texture = ExtResource( 3 )

[node name="Clouds11" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 112, 609 )
scale = Vector2( 6.875, 6.875 )
texture = ExtResource( 3 )

[node name="Clouds12" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 372, 610 )
scale = Vector2( 6.875, 6.875 )
texture = ExtResource( 3 )

[node name="Clouds2" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 5.96046e-07, 5.96046e-07 )
scale = Vector2( 7.59375, 7.59375 )
texture = ExtResource( 1 )
centered = false

[node name="Clouds3" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 247, 5.96046e-07 )
scale = Vector2( 7.28125, 7.28125 )
texture = ExtResource( 1 )
centered = false

[node name="Clouds4" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 3, 239 )
scale = Vector2( 7.59375, 7.59375 )
texture = ExtResource( 1 )
centered = false

[node name="Clouds5" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 250, 239 )
scale = Vector2( 7.28125, 7.28125 )
texture = ExtResource( 1 )
centered = false

[node name="Clouds6" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 2.38419e-07, 475 )
scale = Vector2( 7.59375, 7.59375 )
texture = ExtResource( 1 )
centered = false

[node name="Clouds13" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.694118 )
position = Vector2( 247, 475 )
scale = Vector2( 7.28125, 7.28125 )
texture = ExtResource( 1 )
centered = false

[node name="Button" type="Button" parent="."]
margin_left = 126.0
margin_top = 309.0
margin_right = 343.0
margin_bottom = 420.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Play"
flat = true

[node name="Button2" type="Button" parent="."]
margin_left = 96.0
margin_top = 424.0
margin_right = 371.0
margin_bottom = 543.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Tutorial"
flat = true

[node name="Button3" type="Button" parent="."]
margin_left = 96.0
margin_top = 544.0
margin_right = 371.0
margin_bottom = 663.0
focus_mode = 0
custom_colors/font_color_hover = Color( 0.396078, 0.396078, 0.396078, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
enabled_focus_mode = 0
text = "Quit"
flat = true

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_top = 31.0
margin_right = 479.0
margin_bottom = 176.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][shake rate=5 level=10]Rocket[/shake] 
[shake rate = 5 level 50]Hamster [/shake]"
text = "Rocket 
Hamster "

[node name="dummyHamster" parent="." instance=ExtResource( 4 )]
autoplay = "RESET"
method_call_mode = 1

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_Button2_button_down"]
[connection signal="button_down" from="Button3" to="." method="_on_Button3_button_down"]
